Fixing bug 181364. Fixing problem with drag events in windowless plugins by making the code work as it has always worked on Mac, i.e. prevent drag events on plugins from being eaten by the browser. r=bzbarsky@mit.edu, sr=brendan@mozilla.org, a=asa@mozilla.org